samples/_failures_safe/1761711208_e38aa7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f17ffb6.c: In function ‘pointcloud_free’:
./samples/SAFE/__tmp_5f17ffb6.c:122:5: error: expected declaration or statement at end of input
  122 |     pc->count = 0;
      |     ^~
